[project]
name = "ai-agent-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "feedparser>=6.0.11",
    "grandalf>=0.8",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.9",
    "lxml[html-clean]>=5.4.0",
    "newspaper3k>=0.2.8",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
]
